--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-
-
-
 .input-wrap{
     display : flex;
     justify-content: center;
@@ -26,7 +23,30 @@
     align-items : center;
 }
 
-input {
-    padding-left :  40px;
-    width :  100%
+
+
+
+
+ @import "tailwindcss";
+
+ 
+body {
+    font-family: "Poppins" , "Sans-serif";
+    
+}
+
+ @layer utilities {
+  .tracking-custom {
+    letter-spacing: -0.17px;
+  }
+  .leading-custom {
+    line-height: 18px;
+  }
+}
+
+@theme {
+  --color-primary-blue: #0081FF;
+  --color-primary-black: #2A2A2A;
+  --color-primary-gray: #767676;
+  --color-gray-bg: #F5F5F5;
 }
